add in contexts + sqlite database code